new proj/src/objects/Revenue_Target__c.object
<CustomObject>
    <description>SAM Integration RT for reporting</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SAM Integration</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Target</relationshipLabel>
        <relationshipName>Revenue_Target</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YEN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>SAM RT Integration</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <description>SAM Integration</description>
        <label>High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low__c</fullName>
        <description>SAM Integration</description>
        <label>Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realistic__c</fullName>
        <description>SAM Integration</description>
        <label>Realistic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_ID__c</fullName>
        <description>SAM Integration - Target ID</description>
        <label>Target ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>SAM Integration</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Target</label>
    <nameField>
        <label>Revenue Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Target</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>